layout bugfix and homepage UI

--- a/src/index.css
+++ b/src/index.css
@@ -128,11 +128,13 @@ select {
 }
 
 .grid-container {
-  border: 5px solid limegreen;
+  /* border: 5px solid limegreen; */
   display: grid;
   text-align:center;
   place-items:center;
-  padding-inline:1rem
+  padding-inline:1rem;
+  width:100%;
+  height:100%;
 }
 
 .grid-container * {
@@ -150,11 +152,11 @@ select {
   }
   .grid-container > *:first-child {
     grid-column: 2;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
   }
   .grid-container > *:last-child {
     grid-column: 3;
-    outline: 1px solid yellow;
+    /* outline: 1px solid yellow; */
   }
 
   .grid-container--home {
